<resources>
    <string name="app_name">Account Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_registration">Registration</string>
    <string name="password_hint">Password</string>
    <string name="password_title">Password</string>
    <string name="email_hint">Email</string>
    <string name="lastname_hint">Lastname</string>
    <string name="firstname_hint">Firstname</string>
    <string name="submit_button">Submit</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vaccine Log</string>
    <string name="nav_header_subtitle">App user email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_child">Add Child</string>
    <string name="add_child">Add Child</string>
    <string name="register">Register</string>
    <string name="childFirstName">Child Firstname</string>
    <string name="childLastName">Child Lastname</string>
    <string name="childDOB">Child Date of birth</string>
    <string name="childFatherName">Child Father Name</string>
    <string name="childMotherName">Child Mother Name</string>
    <string name="parent_registration">Parent Registration</string>
    <string name="child_registration">Child Registration</string>
    <string name="practitioner_fname_hint">First Name</string>
    <string name="practitioner_lname_hint">Last Name</string>
    <string name="practitioner_email">Email</string>
    <string name="practitioner_password">Password</string>
    <string name="practitioner_dob">Date of birth</string>
    <string name="practice_address">Practice Address</string>
    <string name="registration_number">Registration Number</string>
    <string name="practitioner_button">Practitioner</string>
    <string name="family_image_button">Family</string>
    <string name="practitioner_image_button_title">Practitioner</string>
    <string name="family_image_button_title">Family</string>
    <string name="landing_page_title">VaccineLog</string>
    <string name="register_practitioner_button_title">Register</string>
    <string name="practitionerRegistration">Registration</string>
    <string name="title_activity_practitioner">Practitioner Activity</string>
    <string name="saveChildEdit">Save</string>
    <string name="add_vaccine">Add Vaccine</string>
    <string name="vaccine_bcg">BCG</string>
    <string name="bcg_off">Add BCG</string>
    <string name="opv_onn">OPV-0</string>
    <string name="opv_off">Add OPV-0</string>
    <string name="opv_1_off">Add OPV-1</string>
    <string name="opv_1_on">OPV-1</string>
    <string name="opv_2_off">Add OPV-2</string>
    <string name="opv_2_on">OPV-2</string>
    <string name="opv_3_off">Add OPV-3</string>
    <string name="opv_3_on">OPV-3</string>
    <string name="opv_4_off">Add OPV-4</string>
    <string name="opv_4_on">OPV-4</string>
    <string name="measles_off">Add Measles</string>
    <string name="measles_on">Measles</string>
    <string name="delete_child">Delete</string>
    <string name="opv0">OPV0</string>
    <string name="opv1">OPV1</string>
    <string name="opv2">OPV2</string>
    <string name="opv3">OPV3</string>
    <string name="opv4">OPV4</string>
    <string name="measles">MEASLES</string>
</resources>
